--- a/notebooks/EDA/stroke_eda.ipynb
+++ b/notebooks/EDA/stroke_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4          Rural             174.12  24.0     never smoked       1  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "5109          Urban              85.28  26.2          Unknown       0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "stroke               0.00    1.00  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "[5110 rows x 6 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "[5110 rows x 5 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "<Axes: title={'center': 'Distribution of Stroke by Avg. Glucose Level'}, xlabel='avg_glucose_level', ylabel='Count'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1157,16 +1157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x29955698920>"
+       "<seaborn.axisgrid.PairGrid at 0x188a7a6fcb0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5110 entries, 0 to 5109\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   age                5110 non-null   int64  \n",
@@ -1309,16 +1309,30 @@
       " 4   avg_glucose_level  5110 non-null   float64\n",
       " 5   gender             5110 non-null   object \n",
       " 6   smoking_status     5110 non-null   object \n",
-      "dtypes: float64(2), int64(3), object(2)\n",
-      "memory usage: 279.6+ KB\n"
+      " 7   stroke             5110 non-null   int64  \n",
+      "dtypes: float64(2), int64(4), object(2)\n",
+      "memory usage: 319.5+ KB\n"
      ]
     }
    ],
    "source": [
-    "relevant_features = ['age', 'hypertension', 'heart_disease', 'bmi', 'avg_glucose_level', 'gender', 'smoking_status']\n",
+    "relevant_features = ['age', 'hypertension', 'heart_disease', 'bmi', 'avg_glucose_level', 'gender', 'smoking_status', 'stroke']\n",
     "stroke_df_features = stroke_df_cleaned[relevant_features]\n",
     "\n",
     "stroke_df_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stroke_df_features = stroke_df_features.rename(columns={\"gender\": \"sex\", 'avg_glucose_level': 'blood_glucose'})\n",
+    "stroke_df_features['sex'] = stroke_df_features['sex'].map({'Male': 0, 'Female': 1}) \n",
+    "stroke_df_features = stroke_df_features.dropna(subset=['sex'])\n",
+    "\n",
+    "stroke_df_features.to_csv('../../cleaned_datasets/normalized_stroke_dataset.csv', index=False)"
    ]
   }
  ],
